@@ -1,7 +1,7 @@
 package tech.lapsa.epayment.ws.rs.app;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Instant;
 import java.util.Arrays;
 
@@ -42,7 +42,7 @@ public class SamplesUtil {
 
     public static XmlHttpForm httpFormSample() {
 	try {
-	    XmlHttpForm sample = new XmlHttpForm(new URL("https://testpay.kkb.kz/jsp/process/logon.jsp"), "POST",
+	    XmlHttpForm sample = new XmlHttpForm(new URI("https://testpay.kkb.kz/jsp/process/logon.jsp"), "POST",
 		    Arrays.asList( //
 			    new XmlHttpFormParam("Signed_Order_B64",
 				    "PGRvY3VtZW50PjxtZXJjaGFudCBjZXJ0X2lkPSI3MWY4MDQxMCIgbmFtZT0iZXVyYXNpYTM2Lmt6Ij48b3JkZXIgb3JkZXJfaWQ9IjgzMzgzNTgyOTg5Njc0NCIgY3VycmVuY3k9IjM5OCIgYW1vdW50PSIxMzcxMS44MiI+PGRlcGFydG1lbnQgbWVyY2hhbnRfaWQ9Ijk4MTE2NjUxIiBhbW91bnQ9IjEzNzExLjgyIi8+PC9vcmRlcj48L21lcmNoYW50PjxtZXJjaGFudF9zaWduIHR5cGU9IlJTQSI+a0hQSzRsY1krZTF0QWpKZlQycVRwdG1oZVVxS2pkNkdTb2hyMk1sdXkxUzMvak9tSDVWVEpza1pPUENGUGNGM0gxZUtmU2tZc3FJdkhuVjF6blhnTVQzWjhEQkx5dWVrQk93d29tRjJJTlpscFltZ1F6cE5WbkJVSzY4eG5Uemxpa0JMMjYxRmI3SmFvbWlhT29DNDNtcWl6R0ZDaWI1UnRJQjNHS3V4OHdYTG1qbThCRGJaZ1lzSEhGNHYrc3BaVjhsSU14aUpiN3JreG1DSCtUeVNBQlNrRnFmYm9acm5EbzhXMklSRnFiU0p6cWc3WDlpQzhwTDZvRndjT2NhekhuY1NWbXRsNkc5Q081K0h4OXEzaG9UcW9WVXJwSEFPdjg3YnZhaUlZa3A0V3M3UTYwTVRGaFRMQmVJUUtpWUN1Z2pUcHJLTmRhMGY2d3FUNlYrMkN3PT08L21lcmNoYW50X3NpZ24+PC9kb2N1bWVudD4="), //
@@ -56,7 +56,7 @@ public class SamplesUtil {
 			    new XmlHttpFormParam("FailureBackLink", "%%PAYMENT_PAGE_URL%%") //
 		    ).stream().toArray(XmlHttpFormParam[]::new));
 	    return sample;
-	} catch (MalformedURLException e) {
+	} catch (URISyntaxException e) {
 	    return null;
 	}
     }
